--- a/authentication/src/main/AndroidManifest.xml
+++ b/authentication/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uziasferreira.authentication">
 
+    <application>
+        <activity android:name=".account.AccountActivity" />
+    </application>
 </manifest>
